# aoc_2024

./: aoc.py  pyproject.toml
src/aoc_2024/: __init__.py  day01.py  day02.py  utils.py
tests/: day01_test.py  day02_test.py
