[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nchapon", email = "nchapon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aoc-2024 = "aoc_2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
